🚀 ApoiaApp - Sistema completo de gestão financeira
✨ Funcionalidades implementadas:
- Sistema de autenticação local com validação
- Tema claro/escuro global
- Telas: Home, Metas, Social, Perfil, Adicionar
- Navegação responsiva com footer
- Componentes reutilizáveis
- Sistema de estilos centralizado
- Dados mockados para desenvolvimento

🎨 Design:
- UI moderna e responsiva
- Componentes bem estruturados
- Cores e tipografia consistentes
- Animações e feedback visual

🔧 Tecnologias:
- React Native + Expo Router
- TypeScript
- AsyncStorage para persistência
- Sistema de temas dinâmico

--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
     "name": "ApoiaApp",
-    "slug": "ApoiaApp",
+    "slug": "apoiaapp-gabriel",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logoBranco.jpeg",
     "scheme": "apoiaapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -19,7 +19,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.gabrielcordeiro007.apoiaappgabriel"
     },
     "web": {
       "output": "static",
@@ -30,12 +31,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/logo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#ffffff"
           }
         }
       ]
@@ -43,6 +44,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "63918df9-23d2-4330-ba31-5eae39085fae"
+      }
+    },
+    "owner": "gabrielcordeiro007"
   }
 }
