feat: Melhorias na UX e responsividade
- Fix: Corrigir visibilidade dos asteriscos da senha (login/register)
- Feat: Adicionar input de mensagem na tela Social
- Refactor: Separar cards de metas individuais na Home
- Style: Melhorar responsividade dos cards na Home
- Add: Componente IndividualGoalCard para metas separadas
- Update: Estilos responsivos e dark mode em todos os componentes

--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/logoBranco.jpeg",
-        "backgroundColor": "#E6F4FE"
+        "backgroundColor": "#FFFFFF"
       },
       "package": "com.gabrielcordeiro007.apoiaappgabriel"
     },
