feat: Atualizar configuração do projeto e adicionar novas funcionalidades
- Alterar ícone do aplicativo e adicionar identificador de pacote para iOS.
- Atualizar dependências no package.json e package-lock.json para versões mais recentes.
- Criar script 'rodar-app.sh' para facilitar o início do projeto e gerenciamento de processos.
- Melhorar a estrutura do banco de dados com novos comentários e índices.
- Implementar novas telas e componentes, incluindo 'Editar Meta' e 'AchievementCarousel'.
- Adicionar suporte a notificações e preferências de usuário no perfil.
- Refatorar componentes para melhor organização e responsividade.

--- a/app.json
+++ b/app.json
@@ -4,16 +4,17 @@
     "slug": "apoiaapp-gabriel",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/logoBranco.jpeg",
+    "icon": "./assets/images/icon.png",
     "scheme": "apoiaapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.gabrielcordeiro007.apoiaappgabriel"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/logoBranco.jpeg",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.gabrielcordeiro007.apoiaappgabriel"
@@ -35,7 +36,8 @@
             "backgroundColor": "#ffffff"
           }
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
